@@ -88,7 +88,7 @@ public class SqlIdCoordinateSource extends IdCoordinateSource {
 
   @Override
   public void validate() throws ValidationException {
-    validate(IdCoordinateInput.class, this::getSourceFields, factory);
+    validate(IdCoordinateInput.SqlIdCoordinateInput.class, this::getSourceFields);
   }
 
   @Override
@@ -104,7 +104,7 @@ public class SqlIdCoordinateSource extends IdCoordinateSource {
     if (values.isEmpty()) {
       return Optional.empty();
     } else {
-      return Optional.of(values.get(0).coordinate);
+      return Optional.of(values.getFirst().coordinate);
     }
   }
 
@@ -139,7 +139,7 @@ public class SqlIdCoordinateSource extends IdCoordinateSource {
     if (values.isEmpty()) {
       return Optional.empty();
     } else {
-      return Optional.of(values.get(0).id);
+      return Optional.of(values.getFirst().id);
     }
   }
 
@@ -249,7 +249,7 @@ public class SqlIdCoordinateSource extends IdCoordinateSource {
   }
 
   /**
-   * Creates a basic query to retrieve all entries in a given box. The box is defines by a latitude
+   * Creates a basic query to retrieve all entries in a given box. The box is defined by a latitude
    * interval and a longitude interval. The intervals are provided via an envelope. The pattern
    * looks like this: <br>
    * {@code <base query> WHERE ST_Intersects(ST_MakeEnvelope(?, ?, ?, ?, 4326 ) , <point column> )
