@@ -8,6 +8,7 @@ package edu.ie3.datamodel.io.source.sql;
 import static edu.ie3.datamodel.io.source.sql.SqlDataSource.createBaseQueryString;
 
 import edu.ie3.datamodel.exceptions.SourceException;
+import edu.ie3.datamodel.exceptions.ValidationException;
 import edu.ie3.datamodel.io.connectors.SqlConnector;
 import edu.ie3.datamodel.io.factory.timeseries.TimeBasedWeatherValueFactory;
 import edu.ie3.datamodel.io.naming.DatabaseNamingStrategy;
@@ -86,8 +87,8 @@ public class SqlWeatherSource extends WeatherSource {
   }
 
   @Override
-  public Optional<Set<String>> getSourceFields() {
-    return dataSource.getSourceFields(tableName);
+  public void validate() throws ValidationException {
+    validate(getInputClass(), () -> dataSource.getSourceFields(tableName));
   }
 
   @Override
@@ -157,7 +158,7 @@ public class SqlWeatherSource extends WeatherSource {
     if (timeBasedValues.isEmpty()) return Optional.empty();
     if (timeBasedValues.size() > 1)
       log.warn("Retrieved more than one result value, using the first");
-    return Optional.of(timeBasedValues.get(0));
+    return Optional.of(timeBasedValues.getFirst());
   }
 
   @Override
